--- a/Experiment.ipynb
+++ b/Experiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "b3f0fc39",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "7f3431e3",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
        "[6000 rows x 4 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,17 +198,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "8f76e7f8",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9586 Examples Found\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2562727ce26e422792bef638d5b752ab",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epoch:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "50156149340545469c3497c0ff773379",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iteration:   0%|          | 0/600 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/plain": [
        "{'scores': array([0., 0., 0., ..., 0., 0., 0.])}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,6 +254,8 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from rank_bm25 import BM25Okapi\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sentence_transformers import SentenceTransformer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
     "\n",
     "class RandomRanker:\n",
     "    def __init__(self):\n",
@@ -322,6 +359,56 @@
     "            \"scores\": scores\n",
     "        }\n",
     "    \n",
+    "class EmbeddingRanker:\n",
+    "    def __init__(self, model_name='all-MiniLM-L6-v2'):\n",
+    "        self.model = SentenceTransformer(model_name)\n",
+    "\n",
+    "    def train(self, catalog_df, queries_df, epochs=0):\n",
+    "        if epochs != 0:\n",
+    "            # Prepare the data for training\n",
+    "            examples = []\n",
+    "            for _, row in queries_df.iterrows():\n",
+    "                text = row['input_text']\n",
+    "                positive_id = row['match_id']\n",
+    "                try:\n",
+    "                    positive_text = catalog_df.loc[catalog_df['catalog_id'] == positive_id, 'text'].values[0]\n",
+    "                    negative_ids = catalog_df.loc[catalog_df['catalog_id'] != positive_id, 'catalog_id'].sample(n=1).values\n",
+    "                    negative_text = catalog_df.loc[catalog_df['catalog_id'] == negative_ids[0], 'text'].values[0]\n",
+    "                    examples.append(InputExample(texts=[text, positive_text, negative_text]))\n",
+    "                except:\n",
+    "                    pass\n",
+    "\n",
+    "            print(f\"{len(examples)} Examples Found\")\n",
+    "\n",
+    "            train_dataloader = DataLoader(examples, shuffle=True, batch_size=16)\n",
+    "            train_loss = losses.TripletLoss(self.model)\n",
+    "\n",
+    "            self.model.fit(train_objectives=[(train_dataloader, train_loss)], epochs=epochs)\n",
+    "\n",
+    "    def prerun(self, catalog_df):\n",
+    "        self.corpus = catalog_df['text'].str.lower().tolist()\n",
+    "        self.corpus_embeddings = self.get_embeddings(self.corpus)\n",
+    "\n",
+    "    def get_score(self, query, catalog_df):\n",
+    "        query_embedding = self.get_embeddings([query[\"input_text\"]])\n",
+    "        scores = cosine_similarity(query_embedding, self.corpus_embeddings)\n",
+    "        return {\n",
+    "            \"scores\": scores.flatten()\n",
+    "        }\n",
+    "\n",
+    "    def get_embeddings(self, texts):\n",
+    "        return self.model.encode(texts)\n",
+    "    \n",
+    "embedding_ranker = EmbeddingRanker()\n",
+    "embedding_ranker.train(train_catalog_df, train_queries_df, epochs=0)\n",
+    "embedding_ranker.prerun(train_catalog_df)\n",
+    "embedding_ranker.get_score({\"input_text\": \"Remote\"}, train_catalog_df)\n",
+    "    \n",
+    "trained_embedding_ranker = EmbeddingRanker()\n",
+    "trained_embedding_ranker.train(train_catalog_df, train_queries_df, epochs=1)\n",
+    "trained_embedding_ranker.prerun(train_catalog_df)\n",
+    "trained_embedding_ranker.get_score({\"input_text\": \"Remote\"}, train_catalog_df)\n",
+    "    \n",
     "tf_idf_ranker = TfidfRanker()\n",
     "tf_idf_ranker.train(train_catalog_df, train_queries_df)\n",
     "tf_idf_ranker.prerun(train_catalog_df)\n",
@@ -335,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "id": "f9d23c79",
    "metadata": {},
    "outputs": [
@@ -343,21 +430,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4000/4000 [00:01<00:00, 3897.37it/s]\n"
+      "100%|██████████| 4000/4000 [00:01<00:00, 3845.52it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Top 10 Random: 0.0045\n"
+      "Top 10 Random: 0.005\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4000/4000 [07:53<00:00,  8.44it/s]\n"
+      "100%|██████████| 4000/4000 [07:42<00:00,  8.66it/s]\n"
      ]
     },
     {
@@ -371,7 +458,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4000/4000 [00:13<00:00, 301.38it/s]"
+      "100%|██████████| 4000/4000 [00:13<00:00, 288.70it/s]\n"
      ]
     },
     {
@@ -379,6 +466,34 @@
      "output_type": "stream",
      "text": [
       "Top 10 BM-25: 0.97\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4000/4000 [00:19<00:00, 200.94it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 10 Sentence Transformer: 0.955\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4000/4000 [00:19<00:00, 200.13it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 10 Fine Tuned Sentence Transformer: 0.96\n"
      ]
     },
     {
@@ -421,7 +536,9 @@
     "\n",
     "print(f'Top 10 Random: {evaluate(RandomRanker(), val_catalog_df, val_queries_df)[\"top_10\"]}')\n",
     "print(f'Top 10 TF-IDF: {evaluate(tf_idf_ranker, val_catalog_df, val_queries_df)[\"top_10\"]}')\n",
-    "print(f'Top 10 BM-25: {evaluate(bm_25_ranker, val_catalog_df, val_queries_df)[\"top_10\"]}')"
+    "print(f'Top 10 BM-25: {evaluate(bm_25_ranker, val_catalog_df, val_queries_df)[\"top_10\"]}')\n",
+    "print(f'Top 10 Sentence Transformer: {evaluate(embedding_ranker, val_catalog_df, val_queries_df)[\"top_10\"]}')\n",
+    "print(f'Top 10 Fine Tuned Sentence Transformer: {evaluate(trained_embedding_ranker, val_catalog_df, val_queries_df)[\"top_10\"]}')"
    ]
   },
   {
