added small titles about what each notebook does

--- a/ExperimentNotebook3.ipynb
+++ b/ExperimentNotebook3.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "6a7ed56f",
+   "metadata": {},
+   "source": [
+    "# Experiment 3: Starting to Use Dense Embeddings\n",
+    "\n",
+    "In this notebook, we look to start applying a dense embedding approach, pulling a pretrained dense embedding model of Sentence Transformers."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 243,
    "id": "e1263247",
