--- a/NewsCorpaGenerator.ipynb
+++ b/NewsCorpaGenerator.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ae2e0567",
+   "metadata": {},
+   "source": [
+    "# News Corpus Generator\n",
+    "\n",
+    "This notebook is used data loading for the news headline dataset, which ends up being the most challenging dataset we evaluate against because of the need to understand semantic similarity a little more robustly."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "a16e3078",
