--- a/CovidAbstractDataGenerator.ipynb
+++ b/CovidAbstractDataGenerator.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d15843a9",
+   "metadata": {},
+   "source": [
+    "# COVID Abstract Data Generator\n",
+    "\n",
+    "This is the data generator script for the COVID 19 paper dataset where we look to map titles to abstracts of papers. This task shares a lot of similarity to document retrieval, as seen in RAG systems today."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "9d45b583",
