updated header description of one notebook

--- a/CovidAbstractDataGenerator.ipynb
+++ b/CovidAbstractDataGenerator.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# COVID Abstract Data Generator\n",
     "\n",
-    "This is the data generator script for the COVID 19 paper dataset where we look to map titles to abstracts of papers. This task shares a lot of similarity to document retrieval, as seen in RAG systems today."
+    "This is the data generator script for the COVID 19 paper dataset where we look to map titles to abstracts of papers. This task shares a lot of similarity to document retrieval, as seen in RAG systems today. This dataset still has a lot of token overlap, making it somewhat easier to get good accuracy for, but it is more challenging than the Walmart-Amazon dataset."
    ]
   },
   {
